Reconstruct the whole project

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,12 +1,13 @@
 
-PROJECT(src)
+PROJECT(core)
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 
 ADD_SUBDIRECTORY(list)
 ADD_SUBDIRECTORY(stack)
+ADD_SUBDIRECTORY(hash)
 
 INSTALL(
-    DIRECTORY ${PROJECT_SOURCE_DIR}/../include/src/
-    DESTINATION ${CMAKE_INSTALL_PREFIX}/include/src
+    DIRECTORY ${PROJECT_SOURCE_DIR}/../include/
+    DESTINATION ${CMAKE_INSTALL_PREFIX}/include
     FILES_MATCHING PATTERN "*.h"
 )
