--- a/utility/ulist/CMakeLists.txt
+++ b/utility/ulist/CMakeLists.txt
@@ -4,7 +4,7 @@ INCLUDE_DIRECTORIES(
 )
 
 AUX_SOURCE_DIRECTORY(. SRC_LIST)
-ADD_EXECUTABLE(ltest ${SRC_LIST})
+ADD_EXECUTABLE(ulist ${SRC_LIST})
 
 IF(WIN32)
     IF(MSVC)
@@ -15,18 +15,18 @@ ELSE(WIN32)
     FIND_LIBRARY(liblist_src "list-src")
 ENDIF(WIN32)
 IF(NOT liblist_core MATCHES liblist_core-NOTFOUND)
-    TARGET_LINK_LIBRARIES(ltest ${liblist_core})
+    TARGET_LINK_LIBRARIES(ulist ${liblist_core})
 ENDIF()
 IF(NOT liblist_src MATCHES liblist_src-NOTFOUND)
-    TARGET_LINK_LIBRARIES(ltest ${liblist_src})
+    TARGET_LINK_LIBRARIES(ulist ${liblist_src})
 ENDIF()
 
 INSTALL(
-    TARGETS ltest 
+    TARGETS ulist
     DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
 )
 
 INSTALL(
-    FILES ${PROJECT_SOURCE_DIR}/test_list/temp.txt
-    DESTINATION ${CMAKE_INSTALL_PREFIX}/test/ltest/
+    FILES ${PROJECT_SOURCE_DIR}/ulist/temp.txt
+    DESTINATION ${CMAKE_INSTALL_PREFIX}/utility/ulist/
 )
