--- a/src/list/CMakeLists.txt
+++ b/src/list/CMakeLists.txt
@@ -4,10 +4,9 @@ INCLUDE_DIRECTORIES(
 )
 
 AUX_SOURCE_DIRECTORY(. SRC_LIST)
-ADD_LIBRARY(list-src SHARED ${SRC_LIST})
+ADD_LIBRARY(list-core SHARED ${SRC_LIST})
 
 INSTALL(
-    TARGETS list-src
+    TARGETS list-core 
     DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
 )
-
